Simplify + use gherkin-testcafe

--- a/.sauce/config.yml
+++ b/.sauce/config.yml
@@ -3,12 +3,13 @@ metadata:
   name: Testcafe+Cucumber integration
 files:
   - ./features/
-  - ./tests/
-  # Cucumber Specifics
-  - ./cucumber.js
 suites:
-  - name: "saucectl"
-    match: "tests/.*.(spec|test).js"
+  - name: "SauceDemo"
+    match: features/SauceDemo.feature
+  - name: "SauceDemoLogins"
+    match: features/SauceDemoLogins.feature
+  - name: "All Features"
+    match: features/(.*)\.feature
 image:
   base: stt-testcafe-cucumber-node
   version: latest
