--- a/package.json
+++ b/package.json
@@ -1,24 +1,24 @@
 {
-  "name": "jenkins-testcafe",
+  "name": "Testcafe-Saucectl",
   "version": "0.0.1",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/comsysto/testcafecucumberdemo"
+    "url": "https://github.com/FriggaHel/testcafe-cucumber-saucectl"
   },
   "scripts": {
-    "testChrome": "cucumber-js --exit"
+    "test": "npx gherkin-testcafe tests/**/*.js tests/**/*.feature",
+    "test-file": "npx gherkin-testcafe tests/**/*.js"
   },
   "devDependencies": {
-    "cucumber": "4.0.0",
-    "cucumber-junit": "^1.7.1",
-    "testcafe": "^1.9.4"
+    "cucumber": "^6.0.4",
+    "gherkin-testcafe": "^2.5.2",
+    "testcafe": "^1.10.0"
   },
   "dependencies": {
-    "@cucumber/cucumber": "^7.0.0-rc.0",
-    "js-yaml": "^3.14.0",
-    "saucelabs": "^4.6.0",
-    "webdriverio": "^6.10.5",
+    "js-yaml": "^3.14.1",
+    "saucelabs": "^4.6.2",
+    "webdriverio": "^6.10.10",
     "xml2js": "^0.4.23"
   }
 }
